# trackflation

./: PROJECT_PLAN.md  README.md  collect_results.py  collect_results_2026.py  execute_all.py  generate_notebooks.py  pyproject.toml  requirements.txt  test_eda.py  update_notebooks.py
notebooks/: 10000-metres_analysis.ipynb  1500-metres_analysis.ipynb  200-metres_analysis.ipynb  3000-metres-steeplechase_analysis.ipynb  400-metres_analysis.ipynb  5000-metres_analysis.ipynb  800-metres_analysis.ipynb  analysis.ipynb  did_shoe_analysis.ipynb  marathon_analysis.ipynb  monte_carlo_ceiling.ipynb  record_hazard_model.ipynb
src/: analysis_engine.py  cli.py  compare_events.py  config.py  data_cleaner.py  forecaster.py  main.py  scraper.py
src/utils/: logger.py
