[project]
name = "trackflation"
version = "0.1.0"
description = "Analyze historical World Athletics top times and project future world records."
authors = [
    {name = "thompgt"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=2.2.0)",
    "requests (>=2.31.0)",
    "beautifulsoup4 (>=4.12.0)",
    "matplotlib (>=3.8.0)",
    "seaborn (>=0.13.0)",
    "numpy (>=1.26.0)",
    "scipy (>=1.11.0)",
    "statsmodels (>=0.14.0)",
    "scikit-learn (>=1.4.0)",
    "prophet (>=1.1.5)",
    "pytest (>=8.0.0)",
    "ipykernel (>=6.29.0)",
    "nbformat (>=5.9.0)",
    "nbconvert (>=7.14.0)",
    "lifelines (>=0.28.0)",
    "tqdm (>=4.66.0)",
    "tabulate (>=0.9.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.scripts]
trackflation = "src.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
